--- a/ReminDTETITB/app/src/main/res/layout/activity_main.xml
+++ b/ReminDTETITB/app/src/main/res/layout/activity_main.xml
@@ -62,9 +62,13 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_main_allinfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_main_line"
         tools:listitem="@layout/info_placeholder" />
 
