add filter implementation

--- a/ReminDTETITB/app/src/main/res/values/colors.xml
+++ b/ReminDTETITB/app/src/main/res/values/colors.xml
@@ -13,6 +13,9 @@
     <!--Main Akademik Filter-->
     <color name="main_akademik_filter">#3C6FA3</color>
 
+    <!--Filter Disabled-->
+    <color name="main_disabled_filter">#BF757575</color>
+
     <!--Onboarding Background Color-->
     <color name="onboarding_bg_screen">#1C334B</color>
 
