--- a/ReminDTETITB/app/src/main/res/values/dimen.xml
+++ b/ReminDTETITB/app/src/main/res/values/dimen.xml
@@ -6,4 +6,7 @@
     <!--For Onboarding-->
     <dimen name="dots_height">30dp</dimen>
     <dimen name="dots_margin_bottom">30dp</dimen>
+
+    <!--List Spacing-->
+    <dimen name="list_spacing">8dp</dimen>
 </resources>
