--- a/ReminDTETITB/app/src/main/res/layout/activity_main.xml
+++ b/ReminDTETITB/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,15 @@
     android:background="@color/main_bg"
     tools:context=".ui.main.MainActivity">
 
+    <ProgressBar
+        android:id="@+id/pb_main_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_search"
         android:layout_width="match_parent"
@@ -66,6 +75,19 @@
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_main_line"
+        tools:listitem="@layout/info_placeholder" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_main_search"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
