--- a/ReminDTETITB/app/src/main/res/layout/activity_detail.xml
+++ b/ReminDTETITB/app/src/main/res/layout/activity_detail.xml
@@ -110,6 +110,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="@string/batalkan_alarm"
+            android:enabled="false"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
             app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
             app:layout_constraintTop_toBottomOf="@+id/imgbtn_detail_alarm_hour" />
