add hint if no internet connection

--- a/ReminDTETITB/app/src/main/res/layout/activity_detail.xml
+++ b/ReminDTETITB/app/src/main/res/layout/activity_detail.xml
@@ -9,11 +9,11 @@
     android:isScrollContainer="false"
     tools:context=".ui.detail.DetailActivity">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.constraint.Guideline
+        <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -139,7 +139,7 @@
             tools:background="@drawable/bg_tag_kuliah"
             tools:text="@string/main_kuliah_filter" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
